spade-tests/src/snapshots/spade_tests__wordlength_inference__wordlength_inference_ia.snap
---
source: spade-tests/src/wordlength_inference.rs
---
fn p<N>(x: int<N>) -> int<N> { x }

fn f(a: int<5>) -> int<7> {
  1 * p(a) + 1
}

entity main(clk: clock, rst: bool) -> int<7> {
  f(3)
}


error: Type of expression is not fully known
  ┌─ testinput:4:3
  │
4 │   1 * p(a) + 1
  │   ^^^^^^^^ The type of this expression is not fully known
  │
  = note: Found incomplete type: int<_>


